--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Hello World App</string>
+    <string name="title_activity_treasure">treasure</string>
 </resources>
